INTERNAL: Add internalBatchId (ALFA-115)
Closes ALFA-115

### table alert_under_processing

![image](/uploads/e51883a36c389be1b063731d9a9fac0d/image.png)

Reviewed-by: Maciej Głowiński <mglowinski@silenteight.com>
Reviewed-by: Norbert Graczykowski <ngraczykowski@silenteight.com>
Merged from: https://gitlab.silenteight.com/sens/scb-bridge/-/merge_requests/35